<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context="eventme.eventme.editProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#000000"
        android:layout_weight="1">

        <Button
            android:text="@string/exit"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_height="41dp"
            android:textSize="18sp"
            android:id="@+id/logout"
            android:layout_weight="1"
            android:onClick="logout"
            android:background="@android:color/transparent"
            tools:ignore="NestedWeights" />

        <View
            android:layout_width="3sp"
            android:layout_height="match_parent"
            android:background="#FFFFFF"/>

        <Button
            android:text="@string/newevent"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:id="@+id/add_event"
            android:textSize="18sp"
            android:layout_weight="1"
            android:onClick="newEvent"
            android:background="@android:color/transparent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">



        <ImageButton
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/shop"
            android:background="@android:color/transparent"
            android:id="@+id/photo_magaziou"
            android:onClick="changePhoto"
            tools:ignore="ContentDescription,NestedWeights" />

        <EditText
            android:textColor="#000000"
            android:id="@+id/onoma_magaziou"
            android:layout_marginTop="60dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/profile"
            tools:ignore="ContentDescription,NestedWeights" />

        <EditText
            android:textColor="#000000"
            android:id="@+id/perigrafi_magaziou"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/description" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/phone"
            tools:ignore="ContentDescription,NestedWeights" />

        <EditText
            android:textColor="#000000"
            android:id="@+id/til_magaziou"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/phone"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/dsag"
            tools:ignore="ContentDescription,NestedWeights"
            android:contentDescription="" />

        <EditText
            android:textColor="#000000"
            android:id="@+id/dieuthynsi_magaziou"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/location" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/deh"
            tools:ignore="ContentDescription,NestedWeights" />

        <TextView
            android:id="@+id/email_magaziou"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="2"
            android:clickable="false"
            android:hint="@string/Εmail"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/fb"
            android:id="@+id/imageView"
            tools:ignore="ContentDescription,NestedWeights" />

        <EditText
            android:textColor="#000000"
            android:id="@+id/fb_magaziou"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/facebook_page"
            style="@style/Widget.AppCompat.AutoCompleteTextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/insta"
            tools:ignore="ContentDescription,NestedWeights" />

        <EditText
            android:textColor="#000000"
            android:id="@+id/insta_magaziou"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            style="@style/Widget.AppCompat.EditText"
            android:hint="@string/instagram_page" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:textAllCaps="false"

            android:background="@drawable/shapebtn"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@android:color/black"
            android:onClick="saveChanges"
            tools:ignore="UnusedAttribute" />

</LinearLayout>
</LinearLayout>
