<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eventme.eventme.NewEvent"
    android:background="@drawable/backphoto">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/gridll"
        android:layout_above="@+id/calendarView"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/uploadPhoto"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginLeft="22dp"
            android:textStyle="normal|bold"
            android:gravity="center"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            android:hint="@string/description"
            tools:gravity="top"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@drawable/edittextstyle"
            android:gravity="top" />

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/fileupload"
            android:id="@+id/UploadButton"
            android:adjustViewBounds="false"
            android:scaleType="fitCenter"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            tools:ignore="ContentDescription" />

    </GridLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/gridll">

        <Button
            android:text="@string/eventname"
            android:id="@+id/NameButton"
            android:background="@drawable/shapebtn"
            android:typeface="serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/background_light"
            android:textStyle="normal|bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ClickEventName"
            android:layout_marginBottom="16dp"/>

        <Button
            android:text="@string/date"
            android:id="@+id/DateButton"
            android:background="@drawable/shapebtn"
            android:typeface="serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/background_light"
            android:textStyle="normal|bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ClickDate"
            android:layout_marginBottom="16dp"/>

        <Button
            android:text="@string/hour"
            android:id="@+id/TimeButton"
            android:background="@drawable/shapebtn"
            android:typeface="serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/background_light"
            android:textStyle="normal|bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ClickTime"
            android:layout_marginBottom="16dp"/>

        <Button
            android:text="@string/location"
            android:id="@+id/LocationButton"
            android:background="@drawable/shapebtn"
            android:typeface="serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/background_light"
            android:textStyle="normal|bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ClickLocation"
            android:layout_marginBottom="16dp"/>


        <Button
            android:text="@string/save"
            android:id="@+id/SaveBtn"
            android:background="@drawable/shapebtn"
            android:typeface="serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/background_light"
            android:textStyle="normal|bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Done" />


    </LinearLayout>


    <Button
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SaveButtonTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:elevation="0dp"
        android:background="@drawable/shapebtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/background_light"
        android:onClick="ClickSave"
        tools:ignore="UnusedAttribute" />

    <CalendarView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/calendarView"
        android:dateTextAppearance="@style/TextAppearance.AppCompat" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:visibility="visible"
        android:timePickerMode="spinner"
        android:layout_above="@+id/SaveButtonTime"
        android:layout_centerHorizontal="true"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>

