<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/darker_gray"
    tools:context="eventme.eventme.UserProfile">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/profile"
        android:id="@+id/userIcon"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitCenter"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/userIcon"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp">

        <Button
            android:text="@string/changepassword"
            android:onClick="SaveChange"
            android:layout_height="wrap_content"
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:background="@drawable/shapebtn"
            android:textColor="@android:color/background_light"
            style="@android:style/Widget.Button.Inset"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/oldPassword"
            android:hint="@string/enter_old_password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/enter_new_password"
            android:id="@+id/newPassword" />

        <Button
            android:text="@string/save"
            android:onClick="Changecomplete"
            android:layout_height="wrap_content"
            android:id="@+id/savePassword"
            android:layout_width="match_parent"
            android:background="@drawable/shapebtn"
            android:textColor="@android:color/background_light"
            style="@android:style/Widget.Button.Inset"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:weightSum="1"
        android:layout_marginStart="22dp"
        android:layout_alignBottom="@+id/userIcon"
        android:layout_toEndOf="@+id/userIcon">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/firstName"
            android:layout_weight="0.46"
            android:textSize="16sp"
            android:textColor="#000000" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LastName"
            android:layout_weight="0.57"
            android:textSize="16sp"
            android:textColor="#000000" />
    </LinearLayout>
</RelativeLayout>
