<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_show_event"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="eventme.eventme.showEvent"
        android:background="@drawable/backphoto">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@drawable/fileupload"
            android:id="@+id/imageView"
            android:background="@android:color/transparent"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToShop"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:id="@+id/Description"
                android:fontFamily="sans-serif"
                tools:gravity="top"
                android:layout_row="2"
                android:layout_column="0"
                android:background="@drawable/edittextstyle"
                android:gravity="top"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/imageView"
                android:layout_alignParentStart="true"
                android:maxLines = "3"
                android:scrollbars = "vertical"
                tools:ignore="ObsoleteLayoutParam" />

            <Button
                android:text="@string/eventname"
                android:id="@+id/ename"
                android:background="@drawable/shapebtn"
                android:typeface="serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/editText2"
                android:layout_alignParentStart="true"
                tools:ignore="ObsoleteLayoutParam" />

            <Button
                android:text="@string/date"
                android:id="@+id/date"
                android:background="@drawable/shapebtn"
                android:typeface="serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/editText2"
                android:layout_alignParentStart="true"
                tools:ignore="ObsoleteLayoutParam" />

            <Button
                android:layout_marginTop="16dp"
                android:text="@string/hour"
                android:id="@+id/hour"
                android:background="@drawable/shapebtn"
                android:typeface="serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|bold"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_alignBaseline="@+id/location"
                android:layout_alignBottom="@+id/location"
                android:layout_centerHorizontal="true"
                tools:ignore="ObsoleteLayoutParam" />

            <Button
                android:text="@string/location"
                android:layout_marginTop="16dp"
                android:id="@+id/location"
                android:background="@drawable/shapebtn"
                android:typeface="serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/date"
                android:layout_alignBottom="@+id/date"
                android:layout_alignParentEnd="true"
                tools:ignore="ObsoleteLayoutParam" />
        </LinearLayout>



</ScrollView>