<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eventme.eventme.profileEdit"
    android:background="@drawable/backphoto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        >

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:background="#4e66de"
            android:onClick="logOut"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:ignore="NestedWeights" />

        <View
            android:layout_width="3sp"
            android:id="@+id/grammoula"
            android:layout_height="match_parent"
            android:background="#FFFFFF" />

        <Button
            android:id="@+id/add_event"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:onClick="newEvent"
            android:text="@string/newevent"
            android:background="#4e66de"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/photo_magaziou"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/profile"
            tools:ignore="ContentDescription,NestedWeights" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/activity_homepage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
     =


        <TabHost
            android:id="@+id/tabHost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/onoma"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginTop="100dp"
                                android:layout_weight="1"
                                android:textColor="#000000"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/email_user"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginBottom="80dp"
                                android:layout_weight="1"
                                android:textColor="#000000"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ListView
                            android:id="@+id/list"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:divider="#b5b5b5"
                            android:dividerHeight="1dp" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </TabHost>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center">

        <Button
            android:id="@+id/editProfilebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:onClick="editProfile"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:background="@drawable/shapebtn"
            tools:ignore="UnusedAttribute"
            android:backgroundTint="#4e66de"/>

    </LinearLayout>
</LinearLayout>